--- a/main.css
+++ b/main.css
@@ -13,11 +13,15 @@ header {
 }
 
 header,
-h2{
+h2,
+h3,
+form button,
+footer{
     font-family: "Bungee", cursive;
+    font-weight: normal;
 }
 
-body{
+body, input, textarea{
     font-family: "Roboto", cursive;
 }
 
@@ -31,10 +35,6 @@ header li {
 header li a{
     color:white;
     text-decoration: none;
-}
-
-section h2{
-    font-weight: normal;
 }
 
 section{
@@ -87,4 +87,65 @@ section p{
 
 .frente_loja{
     margin-right: 32px;
+} 
+
+.redes img{
+    height: 24px;
+}
+
+.redes li{
+    margin-right: 8px;
+    display: inline;
+}
+
+.redes li a {
+    text-decoration:none ;
+}
+
+#contato .container{
+    display: block;
+}
+
+.contact{
+    display: flex;
+    justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button{
+display: block;
+width: 320px;
+padding: 8px;
+margin-bottom: 8px;
+}
+
+form textarea{
+    resize: none;
+    height: 180px;
+}
+
+section h3{
+    margin-bottom: 16px;
+}
+
+form button{
+    background-color:#182c61 ;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover{
+    background-color: #294695;
+}
+
+input:focus textarea:focus{
+    outline-color: #182c61;
+}
+
+footer{
+    background-color:#182c61 ;
+    color: #fff;
+    padding: 8px;
 }
